--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page">
       <header class="header">
         <div class="avatar-circle">
-          <span>L</span><span>M</span><span>S</span><span>Y</span>
+          <img src="lmsy_circle.png" alt="LMSY" class="avatar-photo" />
         </div>
         <h1>LMSY Schedule</h1>
         <h2>Unofficial fan schedule for Lookmhee and Sonya</h2>
@@ -47,17 +47,8 @@
       </main>
 
       <footer class="footer">
-        <p>
-          Fan project built with 🩵 and 💛 for the LMSY family.
-        </p>
-        <p>
-          Hashtags:
-          <a href="https://x.com/search?q=%23LMSY" target="_blank" rel="noopener">#LMSY</a>
-          ·
-          <a href="https://x.com/search?q=%23Lookmhee" target="_blank" rel="noopener">#Lookmhee</a>
-          ·
-          <a href="https://x.com/search?q=%23SonyaSaranphat" target="_blank" rel="noopener">#SonyaSaranphat</a>
-        </p>
+        <p>Fan project built with 💛🩵 for the LMSY family.</p>
+        <p class="hashtags">#ลูกหมีซอนญ่า #LMSY #LMlookmhee #SonyaSaranphat</p>
       </footer>
     </div>
 
