--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
               <option value="all">All</option>
             </select>
           </div>
+
+          <div class="filter-group">
+            <label for="filter-month">Month</label>
+            <select id="filter-month">
+              <option value="all">All</option>
+            </select>
+          </div>
         </section>
 
         <section id="schedule" aria-live="polite"></section>
