--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
           <img src="lmsy_circle.png" alt="LMSY" class="avatar-photo" />
         </div>
         <h1>LMSY Schedule</h1>
-        <h2>Unofficial fan schedule for Lookmhee and Sonya</h2>
+        <h2 class="header-subtitle">
+          Unofficial fan schedule for <span class="nowrap">Lookmhee and Sonya</span>
+        </h2>
         <p class="description">
           All known public events, fan meetings, brand work and special nights collected in one place.
         </p>
