--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           Unofficial fan schedule for <span class="nowrap">Lookmhee and Sonya</span>
         </h2>
         <p class="description">
-          All known public events, fan meetings, brand work and special nights collected in one place.
+          All known public events, fan meetings, brand work and special nights in one place.
         </p>
         <p class="note">
           Always check official channels for last minute changes.
