--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
   
+
+
+
+
+
+
+
+
 <meta property="og:title" content="LMSY Schedule" />
-<meta property="og:description" content="All LMSY events, fan meetings, brand work and special updates for Lookmhee and Sonya." />
-<meta property="og:image" content="lmsy_og_thumbnail.png" />
+<meta property="og:description" content="All LMSY events, fan meetings, brand work and special updates in one place." />
+<meta property="og:image" content="og_image.png" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="lmsy_og_thumbnail.png" />
+<meta name="twitter:image" content="og_image.png" />
 
 </head>
   <body>
