--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   
 <meta property="og:title" content="LMSY Schedule" />
-<meta property="og:description" content="All LMSY events, fan meetings, brand work and special updates in one place." />
+<meta property="og:description" content="All LMSY events, fan meetings, brand work and special updates for Lookmhee and Sonya in Thai time (GMT+7)." />
 <meta property="og:image" content="og_image.png" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image" />
