--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>LMSY Schedule</title>
+    <meta property="og:title" content="LMSY Schedule" />
+    <meta property="og:description" content="Latest LMSY events, fan meetings, and official hashtags in one place." />
+    <meta property="og:image" content="https://lmsy-schedule.vercel.app/og_image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://lmsy-schedule.vercel.app/og_image.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
   </head>
