--- a/index.html
+++ b/index.html
@@ -66,17 +66,15 @@
 
       <footer class="footer">
         <p>Fan project built with 💛🩵 for the LMSY family.</p>
-        <p class="hashtags">
-          Hashtags:<br>
-          <a href="https://x.com/search?q=%23%E0%B8%A5%E0%B8%B9%E0%B8%81%E0%B8%AB%E0%B8%A1%E0%B8%B5%E0%B8%8B%E0%B8%AD%E0%B8%99%E0%B8%8D%E0%B9%88%E0%B8%B2" target="_blank" rel="noopener noreferrer">#ลูกหมีซอนญ่า</a>
-          <a href="https://x.com/search?q=%23LMSY" target="_blank" rel="noopener noreferrer">#LMSY</a>
-          <br>
-          <span class="nowrap">
-            <a href="https://x.com/search?q=%23LMlookmhee" target="_blank" rel="noopener noreferrer">#LMlookmhee</a>
-            <a href="https://x.com/search?q=%23SonyaSaranphat" target="_blank" rel="noopener noreferrer">#SonyaSaranphat</a>
-            <a href="https://x.com/search?q=%23Sonyasarann" target="_blank" rel="noopener noreferrer">#Sonyasarann</a>
-          </span>
-        </p>
+        <p class="footer-hashtags">
+  <a
+    href="https://x.com/intent/tweet?text=%23ลูกหมีซอนญ่า%20%23LMSY%20%23LMlookmhee%20%23SonyaSaranphat%20%23Sonyasarann"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    #ลูกหมีซอนญ่า #LMSY #LMlookmhee #SonyaSaranphat #Sonyasarann
+  </a>
+</p>
       </footer>
     </div>
 
