--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
       <footer class="footer">
         <p>Fan project built with 💛🩵 for the LMSY family.</p>
         <p class="footer-hashtags">
-  <a
-    href="https://x.com/intent/tweet?text=%23ลูกหมีซอนญ่า%20%23LMSY%20%23LMlookmhee%20%23SonyaSaranphat%20%23Sonyasarann"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    #ลูกหมีซอนญ่า #LMSY #LMlookmhee #SonyaSaranphat #Sonyasarann
-  </a>
+ <div class="footer-hashtags">
+  <a href="https://x.com/search?q=%23ลูกหมีซอนญ่า&src=hashtag_click" target="_blank">#ลูกหมีซอนญ่า</a>
+  <a href="https://x.com/hashtag/LMSY" target="_blank">#LMSY</a>
+  <a href="https://x.com/hashtag/LMlookmhee" target="_blank">#LMlookmhee</a>
+  <a href="https://x.com/hashtag/SonyaSaranphat" target="_blank">#SonyaSaranphat</a>
+  <a href="https://x.com/hashtag/Sonyasarann" target="_blank">#Sonyasarann</a>
+</div>
 </p>
       </footer>
     </div>
