--- a/index.html
+++ b/index.html
@@ -66,13 +66,18 @@
 
       <footer class="footer">
         <p>Fan project built with 💛🩵 for the LMSY family.</p>
-      
- <div class="footer-hashtags">
-  <a href="https://x.com/search?q=%23ลูกหมีซอนญ่า&src=hashtag_click" target="_blank">#ลูกหมีซอนญ่า</a>
-  <a href="https://x.com/hashtag/LMSY" target="_blank">#LMSY</a>
-  <a href="https://x.com/hashtag/LMlookmhee" target="_blank">#LMlookmhee</a>
-  <a href="https://x.com/hashtag/SonyaSaranphat" target="_blank">#SonyaSaranphat</a>
-  <a href="https://x.com/hashtag/Sonyasarann" target="_blank">#Sonyasarann</a>
+        <p>Search hashtags:</p>
+<div class="footer-hashtags">
+  <div class="hashtag-row">
+    <a href="https://x.com/search?q=%23ลูกหมีซอนญ่า&src=hashtag_click" target="_blank">#ลูกหมีซอนญ่า</a>
+    <a href="https://x.com/hashtag/LMSY" target="_blank">#LMSY</a>
+  </div>
+
+  <div class="hashtag-row">
+    <a href="https://x.com/hashtag/LMlookmhee" target="_blank">#LMlookmhee</a>
+    <a href="https://x.com/hashtag/SonyaSaranphat" target="_blank">#SonyaSaranphat</a>
+    <a href="https://x.com/hashtag/Sonyasarann" target="_blank">#Sonyasarann</a>
+  </div>
 </div>
 
       </footer>
