--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
     <a href="https://x.com/search?q=%23ลูกหมีซอนญ่า&src=hashtag_click" target="_blank">#ลูกหมีซอนญ่า</a>
     <a href="https://x.com/hashtag/LMSY" target="_blank">#LMSY</a>
   </div>
-
   <div class="hashtag-row">
     <a href="https://x.com/hashtag/LMlookmhee" target="_blank">#LMlookmhee</a>
     <a href="https://x.com/hashtag/SonyaSaranphat" target="_blank">#SonyaSaranphat</a>
     <a href="https://x.com/hashtag/Sonyasarann" target="_blank">#Sonyasarann</a>
   </div>
 </div>
-
+</div>
       </footer>
     </div>
 
