--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <footer class="footer">
         <p>Fan project built with 💛🩵 for the LMSY family.</p>
-        <p>Search hashtags:</p>
+       <p class="hashtag-title">Search hashtags:</p>
 <div class="footer-hashtags">
   <div class="hashtag-row">
     <a href="https://x.com/search?q=%23ลูกหมีซอนญ่า&src=hashtag_click" target="_blank">#ลูกหมีซอนญ่า</a>
